--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,22 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.changeTimeFrame {
+  width: fit-content;
+  height: fit-content;
+  background-color: gray;
+  margin: 15px;
+  padding: 1px;
+  justify-self: end;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.changeTimeFrame > div > button {
+  margin-right: 2px;
+  border: 1px gray solid;
+  padding: 3px;
+  border-radius: 4px;
+  background-color: gray;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.changeTimeFrame > div > button:hover {
+  background-color: #171717;
 }
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+#buttonActive {
+  background-color: #171717; /* Màu khi button được chọn */
+  color: white;
 }
